--- a/style.css
+++ b/style.css
@@ -1,8 +1,6 @@
 body {
     font-family: 'Arial', sans-serif;
     background-color: skyblue;
-    background: url('bg.jpg');
-    background-size: cover;
 }
 
 .main{
@@ -12,8 +10,8 @@ body {
     margin-right: 15%;
     margin-top: 5%;
     margin-bottom: 150px;
-    backdrop-filter: blur(10px); /* Adjust the blur value as needed */
-    background: rgba(255, 255, 255, 0.429); /* Adjust the alpha (last value) for transparency */
+    backdrop-filter: blur(3px);
+    background: rgba(0, 0, 0, 0.265);
 }
 
 .container {
@@ -47,18 +45,6 @@ button:hover {
 }
 
 @media only screen and (max-width: 600px) {
-    button {
-        font-size: 16px;
-        padding: 12px 24px;
-    }
-    
-    .container{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-    }
-
     .main{
         margin: 5%;
     }
